--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@ nav a{
    float: left; 
 } 
 
-.svgContainer,
-img{
+.svgContainer{
+    padding-top: 20px;
     max-width: 1080px;
     height: auto;
 }
